--- a/plugin.xml
+++ b/plugin.xml
@@ -49,6 +49,10 @@
         <source-file src="src/android/InAppBrowserDialog.java" target-dir="src/org/apache/cordova/inappbrowser" />
         <source-file src="src/android/InAppChromeClient.java" target-dir="src/org/apache/cordova/inappbrowser" />
 
+        <source-file src="src/android/AndroidPDF.java" target-dir="src/org/apache/cordova/inappbrowser" />
+        <source-file src="src/android/PDFSource.java" target-dir="src/org/apache/cordova/inappbrowser" />
+        <source-file src="src/android/PDFViewerActivity.java" target-dir="src/org/apache/cordova/inappbrowser" />
+
         <!--  drawable src/android/resources -->
         <resource-file src="src/android/res/drawable-hdpi/ic_action_next_item.png" target="res/drawable-hdpi/ic_action_next_item.png" />
         <resource-file src="src/android/res/drawable-mdpi/ic_action_next_item.png" target="res/drawable-mdpi/ic_action_next_item.png" />
@@ -64,6 +68,9 @@
         <resource-file src="src/android/res/drawable-mdpi/ic_action_remove.png" target="res/drawable-mdpi/ic_action_remove.png" />
         <resource-file src="src/android/res/drawable-xhdpi/ic_action_remove.png" target="res/drawable-xhdpi/ic_action_remove.png" />
         <resource-file src="src/android/res/drawable-xxhdpi/ic_action_remove.png" target="res/drawable-xxhdpi/ic_action_remove.png" />
+
+        <resource-file src="src/android/res/layout/activity_pdfviewer.xml" target="res/layout/activity_pdfviewer.xml" />
+        <resource-file src="src/android/res/menu/menu_pdfviewer.xml" target="res/menu/menu_pdfviewer.xml" />
 
     </platform>
 
